<resources>
    <string name="dcc_app_name">BitExpress</string>
    <string name="loading">loading…</string>
    <string name="title_verify_sms_code">Verify SMS verifivation code</string>
    <string name="title_liveness_detection">Face recognition</string>
    <string name="on_chain_dcc">\@Distributed Credit Chain</string>
    <string name="on_chain_ethereum">\@Ethereum</string>
    <string name="dcc">DCC</string>
    <string name="time_format_yyyymmdd_hhmm">%1$tY-%1$tm-%1$td  %1$tH:%1$tM</string>
    <string name="time_format_yyyymmdd">%1$tY-%1$tm-%1$td</string>
    <string name="period_format_yyyymmdd_dot">%1$tY.%1$tm.%1$td-%2$tY.%2$tm.%2$td</string>
    <string name="time_format_yyyymmdd_hhmmss">%1$tY-%1$tm-%1$td  %1$tH:%1$tM:%1$tS</string>
    <string name="empty_slash">--</string>
    <string name="status_pending">待上链</string>
    <string name="gwei">Gwei</string>
    <string name="ftc_transfer_fee_hint">FTC转账手续费%1$s‰</string>
    <string name="receive_amount_colon">接收金额:</string>
    <string name="sms_code">Verifivation code</string>
    <string name="send_sms_code">SMS code</string>
    <string name="export_private_key_description">The QR code shows the plaintext of your private key, which conveys your ownership of the wallet. Through importing the private key, you can use the wallet on any device, and the generate KeyStore document and wallet password. We strongly recommended that you  backup your private key before using the wallet.</string>
    <string name="ca_not_enabled">您当前使用的统一登录秘钥与链上不一致,将影响部分功能的正常使用</string>
    <string name="bitexpress">BitExpress</string>
    <string name="submit_new_token_title">如何提交新token给BitExpress?</string>
    <string name="token_submit_info_general">如果需要在钱包显示你的Token信息，请务必使用官方邮箱提供一下信息，发送至yimtoken1@163.com我们会有专人处理。</string>
    <string name="common_service_error_toast">系统繁忙,请稍后重试</string>
    <string name="bitexpress_info_mail_address">yimtoken1@163.com</string>
    <string name="coming_soon">Coming soon</string>
    <string name="affiliate_description">总共可邀请5位好友加入BitEXPRESS，\n每邀请一位好友注册并实名后，\n您将获得额外奖励</string>
    <string name="confirm_repayment">Confirm repayment</string>
    <string name="scan_the_qr">Scan the QR code for repayment address</string>
    <string name="loan_submit_fee_colon">借款申请手续费:</string>
    <string name="repayment_date_colon">还币日期:</string>
    <string name="please_select">Please select</string>
    <string name="sms_code1">SMS code</string>
    <string name="press_the_camera">Press the camera to for auto fill-in</string>
    <string name="please_make_sure_that_the_information">Please make sure that the information on this page is consistent with your ID documentation, and make corrections when necessary. When you finish the verification process, you’ll not be able to make a change.</string>
    <string name="extra">Note:</string>
    <string name="remarks">Note</string>
    <string name="transfer_amount">Amount to be transferred</string>
    <string name="transaction_record_detail">Detail of transaction history</string>
    <string name="no_more">No more data</string>
    <string name="load_more">Load more</string>
    <string name="no_transaction_record_yet">No record of this currency</string>
    <string name="communication_log_submit_hint">Tips\n\n1.	Please use athe mobile phone number linked to your ID.\n2.	Please enterinputenter the password for your account onto access to the operatorcarrier (Chinamobile, China Unicom or China Telecom). the carrier’s website. Usually, you need this password to access customer services.\n3.	After clicking “submit” you’ll receive a text message from the operatorcarrier, but no need to replycarrier. You don’t have to respond.\n4.	If you forgot your password, please visit your operatorcarrier’scarrier’s website for retrieval assistance.</string>
    <string name="please_input_phone_num">Please enter your phone number here</string>
    <string name="bank_registered_phone_num">Phone number linked to the account</string>
    <string name="please_input_bank_card_no">Please enter your bank account number here</string>
    <string name="bank_card_no">Bank account number</string>
    <string name="custom_gas_limit">Customized Gas Limit</string>
    <string name="custom_gas_price">Customized Gas Price</string>
    <string name="max_tx_fee_colon">Fee:</string>
    <string name="already_selected">Added</string>
    <string name="transfer_fee_colon">Fee:</string>
    <string name="cert_fee">Cost of verification</string>
    <string name="do_certification">verification</string>
    <string name="issuer_bank">Bank issuer</string>
    <string name="card_no">Bank card</string>
    <string name="phone_num">Phone number</string>
    <string name="phone_owner_name">Full name</string>
    <string name="phone_no">Phone number</string>
    <string name="please_input_phone_no">Please enter your phone number</string>
    <string name="phone_service_password">Password</string>
    <string name="please_input_phone_service_password">Please enter your password</string>
    <string name="import_succeed">Importing successful</string>
    <string name="loan_amount_colon">Amount:</string>
    <string name="repayment_total_amount_colon">Total amount: </string>
    <string name="repayment_principal_amount_colon">Principle to be repaid:</string>
    <string name="repayment_interest_amount_colon">Interest to be repaid:</string>
    <string name="holding_amount_colon">Current balance:</string>
    <string name="receive_address_colon">Loan collection address:</string>
    <string name="max_payment_amount_colon">Max fee: %1$s</string>
    <string name="holding_balance_colon">Balance:</string>
    <string name="max_tx_fee">Fee</string>
    <string name="transfer_amount_colon">Amount:</string>
    <string name="transaction_detail">Detail</string>
    <string name="ok3">OK</string>
    <string name="keystore_or_wallet_password">Please enter correct KeyStore or wallet password</string>
    <string name="importing_failure">Importing failure</string>
    <string name="warning_backup_wallet">Please back up your wallet to other devices to avoid asset loss caused by client deletion, secret key loss, etc.</string>
    <string name="hint_enable_local_protect">Please set local security to protect your wallet safety</string>
    <string name="creating_successful">Creating successful</string>
    <string name="set_local_security">Set local security</string>
    <string name="code_for_more_reward">Enter invitation code for more reward</string>
    <string name="confirm">OK</string>
    <string name="WeXCreatePassportViewController_description3">After create successful,please backup digital asset immediately.</string>
    <string name="wallet_password_guide">Password length is 8\-20 digits</string>
    <string name="please_paste_keystore">Please copy information of KeyStore</string>
    <string name="please_set_passport_password">Set password</string>
    <string name="please_input_passport_password">Code verification</string>
    <string name="verification">Verification</string>
    <string name="the_chain_of_dcc">\@The token on the DCC\n business chain can only be transferred between the wallet addresses on this chain and are compatible with ERC20. If the transfer is to the wallet on ETH business chain, please use cross-chain transfer function.</string>
    <string name="transaction_status_colon">TxReceipt Status:</string>
    <string name="to_address_colon">To: </string>
    <string name="from_address_colon">From: </string>
    <string name="transaction_fee_colon">Fee:</string>
    <string name="transaction_id_colon">TxHash:</string>
    <string name="block_number_colon">Block Height:</string>
    <string name="transaction_time_colon">TimeStamp:</string>
    <string name="address_book">Address book</string>
    <string name="keystore_information">KEYSTORE</string>
    <string name="local_security_is_disabled_successfully">Local security has been disabled , You can enable other security methods</string>
    <string name="private_key_statement2">Private key</string>
    <string name="search">Search</string>
    <string name="transfer">Transfer</string>
    <string name="collect">Collect</string>
    <string name="transactions_record">Transaction history</string>
    <string name="market_quote">Market price</string>
    <string name="quote_not_available">We didn’t find the market price for this currency </string>
    <string name="password_length_invalid">Password length is 8 to 20 digits</string>
    <string name="please_enterinput">Please enter the name of address book</string>
    <string name="receiver_address">Address of collection wallet</string>
    <string name="attentiontip">AttentionTip:</string>
    <string name="tips">Tips</string>
    <string name="data_unavailable">Data unavailable</string>
    <string name="scan_or_enterinput">Scan or enterinput the wallet address of the receiver</string>
    <string name="address_book_informration">Address book informration iswill be bindinglinked with the wallet address., the deletion of Deleting the wallet address or the app will lead to loss of the local address book saved locally. Please be noticed! </string>
    <string name="description_remove_passport">If you have not backed your wallet up haven’t backed up your wallet, then deleting it could cause you never find your digital asset backyou may be unable to find your digital assets after deleting it., pPlease check and confirm if your wallet has been backed up.</string>
    <string name="remove_passport_description">After deleting the wallet, you can only import the wallet and re-enbale it. If you failed to back it updon’t have a backup, then there is no way to keep usingyou won’t be able to use the current wallet. It is strongly recommended to back it upup the wallet before you deletinge it.</string>
    <string name="title_remove_passport">Delete the wallet</string>
    <string name="back_up_wallet">Back up</string>
    <string name="back_up_data">备份数据</string>
    <string name="please_input_current_passport_password">old password:</string>
    <string name="please_input_new_passport_password">new password:</string>
    <string name="export_keystore_description">The QR code shows the KEYSTORE information, which is the signature protection document for your private key. KEYSTORE document is signed through your wallet password. Both the KEYSTORE document and your wallet address are requested to use the wallet on any device. It is strongly recommended that you have a backup of such information before using the wallet. </string>
    <string name="confirm2">OK</string>
    <string name="loan_contract">Loan contract</string>
    <string name="try_again">Try again</string>
    <string name="loan_time_colon">Term:</string>
    <string name="beneficiary_address_colon">To address:</string>
    <string name="date_picker_longvaild">Never</string>
    <string name="date_picker_title">Expiration date</string>
    <string name="date_picker_confirm">OK</string>
    <string name="date_picker_year">Year</string>
    <string name="date_picker_month">Month</string>
    <string name="date_picker_day">Day</string>
    <string name="date_picker_hour">Hour</string>
    <string name="date_picker_minute">Minute</string>
    <string name="digest_pocket">Wallet</string>
    <string name="total_asset">Total Assets</string>
    <string name="hide_zero_assets">Hide zero assets</string>
    <string name="my_ipfs_text5">Data can be synced</string>
    <string name="my_ipfs_text6">Start Synchronization</string>
    <string name="my_ipfs_text7">Reset Cloud Storage Password</string>
    <string name="my_ipfs_text8">Copy Hash</string>
    <string name="my_ipfs_text9">Copy Address</string>
    <string name="my_ipfs_text11">Gateway Address：</string>
    <string name="my_ipfs_text12">A unique Hash will be obtained after the data encrypted and stored in IPFS, and you can access and download the data you stored by the Hash.</string>
</resources>