<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/date_picker_longvaild"
            android:textColor="#4A4A4A"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/date_picker_title"
            android:textColor="#4A4A4A"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/date_picker_confirm"
            android:textColor="#6144CC"
            android:textSize="16sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#11112233"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="15dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/date_picker_year"
                android:textColor="@color/date_picker_text_dark"
                android:textSize="18sp"/>

            <io.wexchain.android.common.view.datepicker.PickerView
                android:id="@+id/dpv_year"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/date_picker_month"
                android:textColor="@color/date_picker_text_dark"
                android:textSize="18sp"/>

            <io.wexchain.android.common.view.datepicker.PickerView
                android:id="@+id/dpv_month"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/date_picker_day"
                android:textColor="@color/date_picker_text_dark"
                android:textSize="18sp"/>

            <io.wexchain.android.common.view.datepicker.PickerView
                android:id="@+id/dpv_day"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_hour_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/date_picker_hour"
                android:textColor="@color/date_picker_text_dark"
                android:textSize="18sp"/>

            <io.wexchain.android.common.view.datepicker.PickerView
                android:id="@+id/dpv_hour"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_minute_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/date_picker_minute"
                android:textColor="@color/date_picker_text_dark"
                android:textSize="18sp"/>

            <io.wexchain.android.common.view.datepicker.PickerView
                android:id="@+id/dpv_minute"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
