<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <include layout="@layout/include_toolbar"/>

    <LinearLayout
        android:id="@+id/ll_tag1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/item_decoration_title_background"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/my_ipfs_text12"
            android:textColor="@color/FF4A4A4A"
            android:textSize="14sp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/cloud_address_tag1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="IPFS Hash："
        android:textColor="@color/FF4A4A4A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_tag1"/>

    <Button
        android:id="@+id/copy_hash"
        style="@style/Widget.AppCompat.Button.Dcc.Medium"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="13dp"
        android:background="@drawable/round_rect_border"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/my_ipfs_text8"
        android:textColor="@color/blue_magenta"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_tag1"/>

    <TextView
        android:id="@+id/cloud_address_hash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="10dp"
        android:textColor="@color/text_min"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cloud_address_tag1"
        tools:text="QmU4hVfhXUk9P5978TFL62vFAPVrvqaYGpA9VTqMKuzXQ6"/>

    <View
        android:id="@+id/cloud_address_lin1"
        style="@style/DividerHorizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/cloud_address_hash"/>

    <TextView
        android:id="@+id/cloud_address_tag2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/my_ipfs_text11"
        android:textColor="@color/FF4A4A4A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cloud_address_lin1"/>

    <Button
        android:id="@+id/copy_address"
        style="@style/Widget.AppCompat.Button.Dcc.Medium"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="13dp"
        android:background="@drawable/round_rect_border"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/my_ipfs_text9"
        android:textColor="@color/blue_magenta"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cloud_address_lin1"/>

    <TextView
        android:id="@+id/cloud_address_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="10dp"
        android:textColor="@color/text_min"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cloud_address_tag2"
        tools:text="https://ipfs.io/ipfs/mU4hVfhXUk9P5978TFL62vFAPVrvqaYGpA9VTqMKuzXQ6"/>

    <View
        style="@style/DividerHorizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/cloud_address_address"/>

</android.support.constraint.ConstraintLayout>
