<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="io.wexchain.android.dcc.modules.ipfs.activity.MyCloudActivity">

    <data>

        <variable
            name="vm"
            type="io.wexchain.android.dcc.modules.ipfs.vm.MyCloudVm"/>

        <variable
            name="asIdVm"
            type="io.wexchain.android.dcc.modules.ipfs.vm.CloudItemVm"/>

        <variable
            name="asBankVm"
            type="io.wexchain.android.dcc.modules.ipfs.vm.CloudItemVm"/>

        <variable
            name="asCmVm"
            type="io.wexchain.android.dcc.modules.ipfs.vm.CloudItemVm"/>

        <variable
            name="asCmTnVm"
            type="io.wexchain.android.dcc.modules.ipfs.vm.CloudItemVm"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/include_toolbar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/item_decoration_title_background"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="@string/my_ipfs_text5"
                android:textColor="@color/FF4A4A4A"
                android:textSize="14sp"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:onClick="@{(v)->vm.tipsClick()}"
                android:src="@drawable/ic_question2"/>
        </LinearLayout>

        <include
            layout="@layout/item_ipfs_data"
            app:vm="@{asIdVm}"/>

        <View style="@style/DividerHorizontal"/>

        <include
            layout="@layout/item_ipfs_data"
            app:vm="@{asBankVm}"/>

        <View style="@style/DividerHorizontal"/>

        <include
            layout="@layout/item_ipfs_data"
            app:vm="@{asCmVm}"/>

        <View
            style="@style/DividerHorizontal"
            android:visibility="gone"/>

        <include
            layout="@layout/item_ipfs_data"
            android:visibility="gone"
            app:vm="@{asCmTnVm}"/>

        <View style="@style/DividerHorizontal"/>

        <Button
            style="@style/Widget.AppCompat.Button.Dcc.Full"
            setisEnable="@{vm.isEnable}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="40dp"
            android:onClick="@{(v)->vm.syncClick()}"
            android:text="@string/my_ipfs_text6"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:onClick="@{(v)->vm.resetClick()}"
            android:text="@string/my_ipfs_text7"
            android:textColor="@color/blue_magenta"
            android:textSize="14sp"/>

    </LinearLayout>

</layout>
