<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="io.wexchain.android.dcc.modules.digestpocket.DigestPocketHomeActivity">

    <data>

        <import type="io.wexchain.android.dcc.vm.ViewModelHelper"/>

        <variable
            name="assets"
            type="io.wexchain.android.dcc.vm.DigitalAssetsVm"/>
    </data>

    <LinearLayout
        android:id="@+id/section_assets"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:background="@drawable/img_coin_detail_top">

            <RelativeLayout
                android:id="@+id/digital_title"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:padding="5dp"
                    android:src="@drawable/arrow_left_white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/iv_back"
                    android:text="@string/digest_pocket"
                    android:textColor="#FFFFFFFF"
                    android:textSize="16sp"/>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/ll_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:drawableRight="@{assets.assetsFilter2?@drawable/icon_asset_unshow:@drawable/icon_asset_show}"
                    android:onClick="@{(v)->assets.filter2()}"
                    android:text="@string/total_asset"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    tools:drawableRight="@drawable/icon_asset_show"/>

                <TextView
                    android:id="@+id/assets_amount_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@{assets.assetsSumValue}"
                    android:textColor="@color/white"
                    android:textSize="28sp"
                    tools:text="≈￥43681365.43159"/>

                <TextView
                    android:id="@+id/assets_amount_value2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@{assets.assetsSumValue2}"
                    android:textColor="#BAA8FE"
                    android:textSize="14sp"
                    tools:text="≈￥43681365.43159"/>

            </LinearLayout>


        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#fff"
            android:paddingLeft="14dp">

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:drawablePadding="8dp"
                android:drawableRight="@{assets.assetsFilter?@drawable/icon_zero_unshow:@drawable/icon_zero_show}"
                android:onClick="@{(v)->assets.filter()}"
                android:text="@string/hide_zero_assets"
                android:textColor="#9B9B9B"
                android:textSize="14sp"
                tools:drawableRight="@drawable/icon_zero_show"/>

            <ImageView
                android:id="@+id/digital_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/icon_add"/>

            <ImageView
                android:id="@+id/digital_select_node"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_toLeftOf="@id/digital_add"
                android:src="@drawable/img_node_green"/>

        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_assets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="@dimen/content_padding_horizontal"
            android:layout_marginRight="@dimen/content_padding_horizontal"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            tools:listitem="@layout/item_digital_currency_summary"/>

    </LinearLayout>

</layout>
